[package]
name = "s3etag"
version = "0.2.0"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2021"
description = "Compute AWS S3 Etags"
repository = "https://github.com/LiosK/s3etag-rs"
publish = false

[features]
default = ["md-5"]

[dependencies]
arrayvec = "0.7"
clap = "4.5"
memmap2 = "0.9"
nix = { version = "0.28", features = ["fs"] }

md-5 = { version = "0.10", optional = true }
# Use libssl instead of Rust Crypto implementation of MD5.
openssl = { version = "0.10", optional = true }

[profile.release]
lto = true
