[package]
name = "s3etag"
version = "0.4.3"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2021"
description = "Compute Amazon S3 ETags"
repository = "https://github.com/LiosK/s3etag-rs"
publish = false

[features]
default = ["md-5"]
md-5 = ["dep:md-5"]
# Use libssl instead of Rust Crypto implementation of MD5.
openssl = ["dep:openssl"]

[dependencies]
arrayvec = "0.7"
clap = { version = "4.5", features = ["env"] }
md-5 = { version = "0.10", optional = true }
nix = { version = "0.29", features = ["fs"] }
openssl = { version = "0.10", optional = true }

[profile.release]
lto = true
